// BLink Protocol v0.08

syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "BLink";

package blink_grpc;

// ======== Gpio Protocol ========
service Gpio_Service {
    rpc Gpio_Set (Gpio_Set_Request) returns (Gpio_Set_Reply) {}
    rpc Gpio_Get (Gpio_Get_Request) returns (Gpio_Get_Reply) {}
    rpc Gpio_StartStreaming (Gpio_StartStreaming_Request) returns (stream Gpio_StartStreaming_Reply) {}
    rpc Gpio_StopStreaming (Gpio_StopStreaming_Request) returns (Gpio_StopStreaming_Reply) {}
}

message Gpio_Set_Request {
    string name = 1;
    bool requestedState = 2;
}

message Gpio_Set_Reply {
}

message Gpio_Get_Request {
    string name  = 1;
}

message Gpio_Get_Reply {
    bool value = 1;
}

message Gpio_StartStreaming_Request {
    string name  = 1;
    string edge = 2;
}

message Gpio_StartStreaming_Reply {
    bool value = 1;
}

message Gpio_StopStreaming_Request {
    string name  = 1;
}

message Gpio_StopStreaming_Reply {
}

// ======== SkyHawkPowerManager Protocol ========
service SkyHawkPowerManager_Service {
    rpc SkyHawkPmgr_GetRegister (SkyHawkPmgr_GetRegister_Request) returns (SkyHawkPmgr_GetRegister_Reply) {}
    rpc SkyHawkPmgr_SetRegister (SkyHawkPmgr_SetRegister_Request) returns (SkyHawkPmgr_SetRegister_Reply) {}
    rpc SkyHawkPmgr_UpdateFW (SkyHawkPmgr_UpdateFW_Request) returns (SkyHawkPmgr_UpdateFW_Reply) {}
    rpc SkyHawkPmgr_GetFWVersion (SkyHawkPmgr_GetFWVersion_Request) returns (SkyHawkPmgr_GetFWVersion_Reply) {}
    rpc SkyHawkPmgr_GetHWVersion (SkyHawkPmgr_GetHWVersion_Request) returns (SkyHawkPmgr_GetHWVersion_Reply) {}
}

message SkyHawkPmgr_GetRegister_Request {
    string regName = 1;
}

message SkyHawkPmgr_GetRegister_Reply {
    int32 value = 1;
}

message SkyHawkPmgr_SetRegister_Request {
    string regName = 1;
    int32 value = 2;
}

message SkyHawkPmgr_SetRegister_Reply {
}

message SkyHawkPmgr_UpdateFW_Request {
    string filePath = 1;
}

message SkyHawkPmgr_UpdateFW_Reply {
    bool success = 1;
}

message SkyHawkPmgr_GetFWVersion_Request {
}

message SkyHawkPmgr_GetFWVersion_Reply {
    string fwVersion = 1;
}

message SkyHawkPmgr_GetHWVersion_Request {
}

message SkyHawkPmgr_GetHWVersion_Reply {
    int32 hwVersion = 1;
}

// ======== Network Protocol ========
message Connection {
    string id = 1;
    string uuid = 2;
}

service Network_Service {
    rpc Network_GetState(Network_GetState_Request) returns (Network_GetState_Reply) {}
}

message Network_GetState_Request {
}

message Network_GetState_Reply {    
    uint32 networkState = 1;
}

// ======== SerialPort Protocol ========
service SerialPort_Service {
    rpc SerialPort_Read(SerialPort_Read_Request) returns (stream SerialPort_Read_Reply) {}
    rpc SerialPort_Write(SerialPort_Write_Request) returns (SerialPort_Write_Reply) {}
    rpc SerialPort_StopReading(SerialPort_StopReading_Request) returns (SerialPort_StopReading_Reply) {}
    rpc SerialPort_Config(SerialPort_Config_Request) returns (SerialPort_Config_Reply) {} 
}

message SerialPort_Write_Request {
    string deviceName = 1;
    bytes data = 2;
    string mode = 3;
}

message SerialPort_Write_Reply {
}

message SerialPort_Read_Request {
    string deviceName = 1;
    string mode = 2;
}

message SerialPort_Read_Reply {    
    bytes data = 1;
}

message SerialPort_StopReading_Request {
    string deviceName = 1;
}

message SerialPort_StopReading_Reply {
}

message SerialPort_Config_Request {  
    string deviceName  = 1;
    int32  baudrate    = 2;
    string parity      = 3;
    int32  charSize    = 4;
    string flowControl = 5;
    string stopBits    = 6;
}

message SerialPort_Config_Reply {    
}

// ======== Modem Protocol ========
service Modem_Service {
    rpc Modem_GetStatus(Modem_GetStatus_Request) returns (Modem_GetStatus_Reply) {}
    rpc Modem_SetAPN(Modem_SetAPN_Request) returns (Modem_SetAPN_Reply) {}
    rpc Modem_GetAPN(Modem_GetAPN_Request) returns (Modem_GetAPN_Reply) {}
    rpc Modem_SetRadioPower(Modem_SetRadioPower_Request) returns (Modem_SetRadioPower_Reply) {}
    rpc Modem_Connect(Modem_Connect_Request) returns (Modem_Connect_Reply) {}
    rpc Modem_Disconnect(Modem_Disconnect_Request) returns (Modem_Disconnect_Reply) {}

    // Not implemented yet
    rpc Modem_GetInfo(Modem_GetInfo_Request) returns (Modem_GetInfo_Reply) {}
    rpc Modem_GetSignalInfo(Modem_GetSignalInfo_Request) returns (Modem_GetSignalInfo_Reply) {}
    rpc Modem_SendSMS(Modem_SendSMS_Request) returns (Modem_SendSMS_Reply) {}
    rpc Modem_Update(Modem_Update_Request) returns (Modem_Update_Reply) {}

}

message Modem_GetStatus_Request {
}

message Modem_GetStatus_Reply {
}

message Modem_GetInfo_Request {
}

message Modem_GetInfo_Reply {
}

message Modem_SetAPN_Request {
    string apn = 1;
}

message Modem_SetAPN_Reply {
}

message Modem_GetAPN_Request {
}

message Modem_GetAPN_Reply {
    string apn = 1;
}

message Modem_GetSignalInfo_Request {
}

message Modem_GetSignalInfo_Reply {
}

message Modem_SetRadioPower_Request {
}

message Modem_SetRadioPower_Reply {
}

message Modem_SendSMS_Request {
}

message Modem_SendSMS_Reply {
}

message Modem_Update_Request {
}

message Modem_Update_Reply {
}

message Modem_Connect_Request {
}

message Modem_Connect_Reply {
}

message Modem_Disconnect_Request {
}

message Modem_Disconnect_Reply {
}


// ======== Network.Wifi Protocol ========
service Wifi_Service {
    rpc Wifi_GetAccessPoints(Wifi_GetAccessPoints_Request) returns (Wifi_GetAccessPoints_Reply) {}
    rpc Wifi_AddConnection(Wifi_AddConnection_Request) returns (Wifi_AddConnection_Reply) {}
    rpc Wifi_GetConnections(Wifi_GetConnections_Request) returns (Wifi_GetConnections_Reply) {}
    rpc Wifi_Connect(Wifi_Connect_Request) returns (Wifi_Connect_Reply) {}
    rpc Wifi_RemoveConnection(Wifi_RemoveConnection_Request) returns (Wifi_RemoveConnection_Reply) {}
    rpc Wifi_SetAutoConnect(Wifi_SetAutoConnect_Request) returns (Wifi_SetAutoConnect_Reply) {}
}

message Wifi_GetAccessPoints_Request {
}

message Wifi_GetAccessPoints_Reply {
    message AccessPoint {
        string ssid = 1;
        uint32 signalQuality = 2;
    }
    repeated AccessPoint accessPoint = 2;
}

message Wifi_AddConnection_Request {
    string id = 1;
    string ssid = 2;
    string psk = 3;
    bool persistent = 4;
}

message Wifi_AddConnection_Reply {
}

message Wifi_GetConnections_Request {
}

message Wifi_GetConnections_Reply {
    repeated Connection wifiConnection = 1;
}

message Wifi_Connect_Request {
    string id = 1;
}

message Wifi_Connect_Reply {
}

message Wifi_RemoveConnection_Request {
    string id = 1;
}

message Wifi_RemoveConnection_Reply {
}

message Wifi_SetAutoConnect_Request {
    bool value = 1;
}

message Wifi_SetAutoConnect_Reply {
}


// ======== RTC Protocol ========
service RTC_Service {
    rpc RTC_GetTime(RTC_GetTime_Request) returns (RTC_GetTime_Reply) {}
    
    // NTP service will automatically update the time with a valid internet connection
    rpc RTC_SetTime(RTC_SetTime_Request) returns (RTC_SetTime_Reply) {}
}

message RTC_GetTime_Request {
}

message RTC_GetTime_Reply {
    uint64 unixTimestamp = 1;
}

message RTC_SetTime_Request {
    uint64 unixTimestamp = 1;
}

message RTC_SetTime_Reply {
}

// ======== Accelerometer Protocol ========
service Accelerometer_Service {
    rpc Accelerometer_Start (Accelerometer_Start_Request) returns (Accelerometer_Start_Reply) {}
    rpc Accelerometer_Stop (Accelerometer_Stop_Request) returns (Accelerometer_Stop_Reply) {}
    rpc Accelerometer_Get_Samples (Accelerometer_Get_Samples_Request) returns (Accelerometer_Get_Samples_Reply) {}
}

message Accelerometer_Start_Request {
    int32 dataRate = 1;
    int32 axisRange = 2;
}

message Accelerometer_Start_Reply {
}

message Accelerometer_Stop_Request {
}

message Accelerometer_Stop_Reply {
}

message Accelerometer_Get_Samples_Request {
}

message Accelerometer_Get_Samples_Reply {
    repeated double xAxis = 1;
    repeated double yAxis = 2;
    repeated double zAxis = 3;
    repeated uint64 timestamp = 4;
}


// ======== Wiegand Protocol ========
service Wiegand_Service {
    rpc Wiegand_Read(Wiegand_Read_Request) returns (stream Wiegand_Read_Reply) {}
    rpc Wiegand_StopReading(Wiegand_StopReading_Request) returns (Wiegand_StopReading_Reply) {}
}

message Wiegand_Read_Request {
    string deviceName = 1;
}

message Wiegand_Read_Reply {    
    int64 data = 1;
}

message Wiegand_StopReading_Request {
    string deviceName = 1;
}

message Wiegand_StopReading_Reply {
}


// ======== SkyhawkMisc Protocol ========
service SkyhawkMisc_Service {
    rpc WiegandEN_OneWireDIS_Set(WiegandEN_OneWireDIS_Set_Request) returns (WiegandEN_OneWireDIS_Set_Reply) {}
    rpc WiegandEN_OneWireDIS_Get(WiegandEN_OneWireDIS_Get_Request) returns (WiegandEN_OneWireDIS_Get_Reply) {}
    rpc WWANAntennaEN_Set(WWANAntennaEN_Set_Request) returns (WWANAntennaEN_Set_Reply) {}
    rpc WWANAntennaEN_Get(WWANAntennaEN_Get_Request) returns (WWANAntennaEN_Get_Reply) {}
    rpc PoEEN_Set(PoEEN_Set_Request) returns (PoEEN_Set_Reply) {}
    rpc PoEEN_Get(PoEEN_Get_Request) returns (PoEEN_Get_Reply) {}
    rpc MezzSerialMode_Set(MezzSerialMode_Set_Request) returns (MezzSerialMode_Set_Reply) {}
    rpc MezzSerialMode_Get(MezzSerialMode_Get_Request) returns (MezzSerialMode_Get_Reply) {}
    rpc DetectMezz(DetectMezz_Request) returns (DetectMezz_Reply) {}
}

message WiegandEN_OneWireDIS_Set_Request {
    bool requestedState = 1;
}

message WiegandEN_OneWireDIS_Set_Reply {
}

message WiegandEN_OneWireDIS_Get_Request {
}

message WiegandEN_OneWireDIS_Get_Reply {
    bool value = 1;
}

message WWANAntennaEN_Set_Request {
    bool requestedState = 1;
}

message WWANAntennaEN_Set_Reply {
}

message WWANAntennaEN_Get_Request {
}

message WWANAntennaEN_Get_Reply {
    bool value = 1;
}

message PoEEN_Set_Request {
    bool requestedState = 1;
}

message PoEEN_Set_Reply {
}

message PoEEN_Get_Request {
}

message PoEEN_Get_Reply {
    bool value = 1;
}

message MezzSerialMode_Set_Request {
    string mode = 1;
}

message MezzSerialMode_Set_Reply {
}

message MezzSerialMode_Get_Request {
}

message MezzSerialMode_Get_Reply {
    string value = 1;
}

message DetectMezz_Request {
}

message DetectMezz_Reply {
    bool value = 1;
}
